css/styles.css
/* ... */
.single-project .project-image {
	width: 100%;
	float: left;
	text-align: left;
	margin-bottom: 25px;
}
.single-project h3 {
	margin-bottom: 10px;
	padding-bottom: 7px;
	line-height: 40px;
	border-bottom: 1px dotted #dadada;
}
.single-project .project-description {
	margin-bottom: 25px;
}
.single-project .button {
	margin-left: 0;
}
.single-project .project-information {
	margin-bottom: 10px;
}
.single-project .project-information ul li {
	border-bottom: 1px dotted #dadada;
	padding-bottom: 5px;
	margin-top: 10px;
}
.single-project .project-information ul li span {
	font-weight: 700;
	margin-right: 5px;
}

footer .container{
	padding-top: 3em;
}

footer .container.mobile .column {
	margin-bottom: 2em;
}

footer .contact .caption {
    font-size: 1.2em;
    padding-bottom: 0.8em;
}

footer .contact a {
    text-decoration: none;
    font-size: 1.5em;
}



.one-third.column {
	width:33%;
	display:inline-block;
	margin: 1em 0;
}

@media screen and (max-width: 700px) {
	.one-third.column {
		width: 80%;
	}
}

.one-half.column {
	width:49%;
	display:inline-block;
	margin: 1em 0;
	vertical-align: text-top;
}

.headsetContainer {
	width: 90%;
    margin: 0 auto;
    text-align: center;
    position: relative;}

.headsetContainer a {
	display: inline;
}

.headsetGroup {
	display:inline-block;
}

.headsetContainer a img {
	/*float:left;*/
}

.expList {
	font-size:20px; 
	line-height:2.4em; 
	text-align:left; 
	width:650px;
	display:inline-block;
}

@media screen and (max-width: 680px) {
	.expList {
		width: 100%;
	}
}

.VRPlayerIMG {
	background-image: url('../images/VR_Player.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    height: 26em;
    width: 100%;
}

/* LOGO */

.VRLogo {
	height: 9.6em;
    width: 29em;
    left: 0;
    top: 0;
    z-index: 1001;
    position: fixed;
    background-image: url('../images/logoCombined.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 0 0;
}

@media screen and (max-width: 700px) {
	#main-nav.fixed {
		width:90%;
	}

	.VRLogo {
		height: 10em;
    	width: 64%;
	}
}

@media (max-width: 480px){
	#main-nav.fixed {
		width:90%;
		min-height:50px;
	}

	.VRLogo {
        height: 6.4em;
    	width: 80%;
	}
}

@media (max-width: 1024px) and (min-width: 768px) {
	.navbar-brand {
		display: inherit !important;
	}

	.VRLogo {
		/*display: none;*/
	}
}


.navbar-brand {
	display:none;
	padding: 0.7em 1em 1em 10em;
}

@media (min-width: 768px){
	.container>.navbar-collapse{
		margin-left:42%;
	}
	
}

